projectbuilders/makebuilder/makeoutputmodel.h
@@ -29,6 +29,7 @@
 #include <QLinkedList>
 #include <QMap>
 #include <QVector>
+#include <QQueue>
 
 class FilteredItem
 {
@@ -72,6 +73,10 @@ public:
     void addLines( const QStringList& );
     void addLine( const QString& );
 
+private slots:
+    /// add batches of lines to prevent UI-lockup
+    void addLineBatch();
+
 private:
     KUrl urlForFile( const QString& ) const;
     bool isValidIndex( const QModelIndex& ) const;
@@ -84,6 +89,7 @@ private:
     PositionMap positionInCurrentDirs;
 
     KUrl buildDir;
+    QQueue<QString> lineBuffer;
 };
 
 Q_DECLARE_METATYPE( MakeOutputModel::OutputItemType )
