projectbuilders/makebuilder/tests/test_makeoutputmodel.cpp
@@ -25,6 +25,8 @@
 
 #include <QStringList>
 #include <QTest>
+#include <QSignalSpy>
+#include <QDebug>
 
 QTEST_MAIN(TestMakeOutputModel)
 
@@ -35,6 +37,7 @@ TestMakeOutputModel::TestMakeOutputModel(QObject* parent): QObject(parent)
 
 void TestMakeOutputModel::benchAddLines()
 {
+    // see also: https://bugs.kde.org/show_bug.cgi?id=295361
     MakeOutputModel model(KUrl("/tmp/build-foo"));
     QStringList lines;
     const int numLines = 1000;
@@ -42,9 +45,28 @@ void TestMakeOutputModel::benchAddLines()
     for(int i = 0; i < numLines; ++i) {
         lines << (QString::number(i) + QString().fill('a', charsPerLine));
     }
+
+    qRegisterMetaType<QModelIndex>("QModelIndex");
+    QSignalSpy spy(&model, SIGNAL(rowsAboutToBeInserted(QModelIndex, int, int)));
+
+    QElapsedTimer totalTime;
+    totalTime.start();
+
     QBENCHMARK {
         model.addLines(lines);
+        while(model.rowCount() != lines.count()) {
+            QCoreApplication::instance()->processEvents();
+        }
     }
+
+    QVERIFY(model.rowCount() == lines.count());
+    const qint64 elapsed = totalTime.elapsed();
+
+    qDebug() << "ms elapsed to add lines: " << elapsed;
+    qDebug() << "total number of added lines: " << lines.count();
+    const double avgUiLockup = double(elapsed) / spy.count();
+    qDebug() << "average UI lockup in ms: " << avgUiLockup;
+    QVERIFY(avgUiLockup < 200);
 }
 
 #include "test_makeoutputmodel.moc"
